added terms of use page

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -10,7 +10,7 @@ $link-hover: $grey;
 $family-primary: $family-sans-serif;
 $body-weight: $weight-light;
 
-$box-background-color: #daffe6;
+/* $box-background-color: #D8F2E1; */
 
 .title {
   color: aqua;
