about ol style change

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -32,6 +32,16 @@ $body-weight: $weight-light;
 }
 
 
+.my-content ol {
+  margin-top: 1em;
+}
+
+.my-content ol li {
+  margin-left: 2em;
+  margin-top: 0.1em;
+  margin-bottom: 0.5em;
+}
+
 
 
 
